--- a/css/style_signUp.css
+++ b/css/style_signUp.css
@@ -113,7 +113,7 @@ header {
     margin: 0;
 }
 
-/* БЛОК ДЛЯ ВХОДА В АКК */
+/* БЛОК РЕГИСТРАЦИИ */
 
 .mainBox {
     width: 100%;
@@ -132,7 +132,7 @@ header {
     justify-content: space-around;
     align-items: center;
     width: 30vw;
-    height: 70vh;
+    height: 80vh;
 }
 
 .mainTextLogin {
@@ -146,6 +146,8 @@ header {
     display: flex;
     flex-direction: column;
     width: 75%;
+    height: 60%;
+    justify-content: space-around;
 }
 
 .inputs input {
@@ -163,23 +165,32 @@ header {
     text-align: center;
 }
 
+.inputs select {
+    background-color: #ef4b4d;
+    outline: 0;
+    color: white;
+    /* width: 30%; */
+    text-align: center;
+    font-size: 1.5vw;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 900;
+    border-bottom: 0.5vh solid white;
+    border-radius: 30%;
+}
+
+.inputs select option {
+    background-color: white;
+    color: #ef4b4d;
+    font-size: 1.5vw;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 900;
+}
+
+
 .inputs input::placeholder {
     text-align: center;
     color: #d6d5d4;
     font-weight: 700;
-}
-
-.recoveryRegister {
-    display: flex;
-    justify-content: space-between;
-    width: 75%;
-}
-
-.recoveryRegister a {
-    color: wheat;
-    font-size: 1vw;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 900;
 }
 
 .buttonsReg {
@@ -191,7 +202,7 @@ header {
 .buttonsReg button {
     background-color: white;
     color: #ef4b4d;
-    padding: 2vh 2vw;
+    padding: 1.5vh 1vw;
     font-size: 1.5vw;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 900;
@@ -202,4 +213,47 @@ header {
 .buttonsReg button:hover {
     color: white;
     background-color: #ffa5a5;
+}
+
+/* СПЛЫВАЮЩЕЕ ОКНО */
+
+.centerDropWindow {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 35vh;
+    padding: 0 30vw;
+}
+
+.dropWindow {
+    width: 100%;
+    background-color: #ffa5a5;
+    height: 27vh;
+    border-radius: 15px;
+}
+
+.exitButton {
+    text-align: end;
+    margin-right: 1vw;
+    font-size: 2vw;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 900;
+    cursor: default;
+    color: white;
+}
+
+.containerTextMessage {
+    width: 100%;
+    height: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* background-color: red; */
+}
+
+.textMessage {
+    font-size: 2vw;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 900;
+    color: white;
 }
